# secret-plan

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: copilot-instructions.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  error.rs  hibp.rs  lib.rs  main.rs  models.rs  sqlite_repo.rs  strength.rs  tests.rs  traits.rs  vault.rs
src/lib/: stores.svelte.ts  types.ts
src/lib/components/: AddCredentialForm.svelte  CredentialCard.svelte  ErrorNotification.svelte  LoadingOverlay.svelte  PasswordGenerator.svelte
src/routes/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/onboarding/: +page.svelte
