[package]
name = "secret-plan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secret_plan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cryptography
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
sha1 = "0.10.6"
base64 = "0.22.1"
# Database
rusqlite = { version = "0.34.0", features = ["bundled"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
# Error handling
thiserror = "2"
# Time handling
chrono = { version = "0.4.40", features = ["serde"] }
# HTTP client for HIBP API
reqwest = { version = "0.12", features = ["json"] }
# Async support
tokio = { version = "1.44", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[features]
test-utils = []

